infra/monitoring/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
    kubernal.io/managed-by: kubernal
spec:
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      protocol: TCP
    - name: grpc
      port: 9096
      targetPort: 9096
      protocol: TCP
